// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select cell component renders correctly when checked 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall"
  role="cell"
>
  <WithStyles(ForwardRef(Checkbox))
    checked={true}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    className="tour-dataview-checkbox-2"
    icon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select row 2",
      }
    }
    onClick={[Function]}
    size="small"
  />
</div>
`;

exports[`Select cell component renders correctly when unchecked 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall"
  role="cell"
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    className="tour-dataview-checkbox-2"
    icon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select row 2",
      }
    }
    onClick={[Function]}
    size="small"
  />
</div>
`;
